<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pure_pursuit</name>
  <version>0.0.0</version>
  <description>pure pursuit path following</description>

  <maintainer email="todo@gmail.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>orocos_kdl</depend>
  <depend>ackermann_msgs</depend>
  <depend>rclpy</depend>

  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>
