<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_gui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mikuni@todo.todo">mikuni</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- 添加 Qt 依赖 -->
  <build_depend>Qt5Widgets</build_depend>
  <build_depend>Qt5Multimedia</build_depend>
  <!-- 添加 OpenCV 依赖 -->
  <build_depend>opencv</build_depend>

  <exec_depend>Qt5Widgets</exec_depend>
  <exec_depend>Qt5Multimedia</exec_depend>
  <exec_depend>opencv</exec_depend>
  <depend>om_cart</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
